load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["clone.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virtctl/clone",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",

        # Clone API (correta)
        "@io_kubevirt_api//clone/v1beta1:go_default_library",

        # KubeVirt client
        "@io_kubevirt_client_go//kubecli:go_default_library",

        #library
        "//pkg/virtctl/clientconfig:go_default_library",
    ],
)
